# public/swagger.json
@@ -7,18 +7,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"PingResponse": {
-				"properties": {
-					"message": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": true
-			},
 			"Patient": {
 				"properties": {
 					"id": {
@@ -245,25 +233,6 @@
 		"contact": {}
 	},
 	"paths": {
-		"/patients/ping": {
-			"get": {
-				"operationId": "GetMessage",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/PingResponse"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": []
-			}
-		},
 		"/patients": {
 			"get": {
 				"operationId": "GetPatiens",
